# emailalias-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
emailalias/: __init__.py  client.py  errors.py
