[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emailalias"
version = "1.0.1"
description = "Official Python client for the EmailAlias API."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "EmailAlias" }]
dependencies = ["requests>=2.28"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://emailalias.io"
Documentation = "https://emailalias.io/documentation"
Repository = "https://github.com/emailalias/emailalias-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["emailalias*"]
